chore(webapp): Adding database

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,10 @@ CALLBACK_URL=http://127.0.0.1:5000/callback
 
 # Secret key pour Flask (optionnel, généré automatiquement si non défini)
 SECRET_KEY=your_random_secret_key_here
+
+# Database Configuration (optionnel, pour activer le cache)
+# Par défaut: SQLite (fichier local discogs_cache.db)
+# DATABASE_URL=sqlite:///discogs_cache.db
+
+# Pour PostgreSQL:
+# DATABASE_URL=postgresql://user:password@host:port/database
